Сделана разметка хедера

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Барбершоп</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>Барбершоп «Бородинский»</title>
+</head>
 
-  </body>
+<body class="page">
+  <header class="page__header">
+    <nav class="navigation">
+      <a class="navigation__logo">
+        <img class="navigation__image" src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+      </a>
+      <ul class="navigation__menu menu">
+        <li class="menu__item">
+          <a class="menu__link" href="info.html">Информация</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="news.html">Новости</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="price.html">Прайс-лист</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="catalog.html">Магазин</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="contacts.html">Контакты</a>
+        </li>
+      </ul>
+      <ul class="navigation__user user">
+        <li class="user__item user__item--login">Вход</li>
+      </ul>
+    </nav>
+  </header>
+</body>
+
 </html>
