Сделана разметка блока преимуществ

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Барбершоп «Бородинский»</title>
 </head>
 
@@ -34,6 +36,28 @@
       </ul>
     </nav>
   </header>
+  <main class="page__main container">
+
+    <h1 class="page__title visually-hidden">Барбершоп «Бородинский»</h1>
+
+    <section class="features">
+      <h2 class="features__title visually-hidden">Преимущества</h2>
+      <ul class="features_list">
+        <li class="feature__item">
+          <h3 class="feature__tagline" >Быстро</h3>
+          <p class="feature__text">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
+        </li>
+        <li class="feature__item">
+          <h3 class="feature__tagline" >Круто</h3>
+          <p class="feature__text">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
+        </li>
+        <li class="feature__item">
+          <h3 class="feature__tagline" >Дорого</h3>
+          <p class="feature__text">Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 
 </html>
