Сделана разметка блока фотогалереи

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
       <a class="news__link button" href="news.html">Все новости</a>
     </section>
 
+    <section class="gallery">
+      <h2 class="gallery__title">Фотогалерея</h2>
+      <figure class="gallery__content">
+        <a class="gallery__link" href="#">
+          <img class="gallery__image" src="img/studio.jpg" width="286" height="164" alt="Интерьер">
+        </a>
+      </figure>
+      <button class="button gallery__button gallery__button--back">Назад</button>
+      <button class="button gallery__button gallery__button--next">Вперед</button>
+    </section>
+
   </main>
 </body>
 
