Сделана разметка блока контактной информации

--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
       <button class="button gallery__button gallery__button--next">Вперед</button>
     </section>
 
+    <section class="contacts">
+      <h2 class="contacts__title">Контактная информация</h2>
+      <p class="contacts__address">
+        Барбершоп «Бородинский»
+        <br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
+        <br> Телефон: +7 (812) 666-02-66
+      </p>
+      <p class="contacts__time">
+        Время работы:
+        <br> пн—пт: с 10:00 до 22:00
+        <br> сб—вс: с 10:00 до 19:00
+      </p>
+      <a class="button contacts__button contacts__button--path" href="map.html">Как проехать</a>
+      <a class="button contacts__button contacts__button--feedback" href="contacts.html">Обратная связь</a>
+    </section>
+
   </main>
 </body>
 
