--- a/index.html
+++ b/index.html
@@ -102,30 +102,57 @@
       <a class="button contacts__button contacts__button--feedback" href="contacts.html">Обратная связь</a>
     </section>
 
-        <section class="appointment">
-          <h2 class="appointment__title">Записаться</h2>
-          <p class="appointment__info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-          <form class="appointment__form" action="https://echo.htmlacademy.ru" method="post">
-            <p class="appointment__item">
-              <label class="appointment__label" for="appointment__date">Дата</label>
-              <input class="appointment__form" id="appointment__date" type="text" name="date" value="" placeholder="08.10.2017">
-            </p>
-            <p class="appointment__item">
-              <label class="appointment__label" for="appointment__time">Время</label>
-              <input class="appointment__form" id="appointment__time" type="text" name="time" value="" placeholder="10:00">
-            </p>
-            <p class="appointment__item">
-              <label class="appointment__label" for="appointment__name">Ваше имя</label>
-              <input class="appointment__form" id="appointment__name" type="text" name="name" value="" placeholder="Борода">
-            </p>
-            <p class="appointment__item">
-              <label class="appointment__label" for="appointment__phone">Телефон</label>
-              <input class="appointment__form" id="appointment__phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
-            </p>
-            <button class="button appointment__button" type="submit">Отправить</button>
-          </form>
-        </section>
+    <section class="appointment">
+      <h2 class="appointment__title">Записаться</h2>
+      <p class="appointment__info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
+      <form class="appointment__form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="appointment__item">
+          <label class="appointment__label" for="appointment__date">Дата</label>
+          <input class="appointment__form" id="appointment__date" type="text" name="date" value="" placeholder="08.10.2017">
+        </p>
+        <p class="appointment__item">
+          <label class="appointment__label" for="appointment__time">Время</label>
+          <input class="appointment__form" id="appointment__time" type="text" name="time" value="" placeholder="10:00">
+        </p>
+        <p class="appointment__item">
+          <label class="appointment__label" for="appointment__name">Ваше имя</label>
+          <input class="appointment__form" id="appointment__name" type="text" name="name" value="" placeholder="Борода">
+        </p>
+        <p class="appointment__item">
+          <label class="appointment__label" for="appointment__phone">Телефон</label>
+          <input class="appointment__form" id="appointment__phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+        </p>
+        <button class="button appointment__button" type="submit">Отправить</button>
+      </form>
+    </section>
   </main>
+  <footer class="page__footer footer-contacts">
+    <p class="footer-contacts__text">
+      Барбершоп «Бородинский»
+      <br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
+      <br>
+      <a class="footer-contacts__link" href="map.html">Как нас найти?</a>
+      <br> Телефон: +7 (812) 666-02-66
+    </p>
+    <div class="footer__social social">
+      <b class="social__tagline">Давайте дружить!</b>
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link" href="#">Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">Фейсбук</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </div>
+    <p class="footer__copyright copyright">
+      <b class="copyright__text">Разработано:</b>
+      <a class="button copyright__button" href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
+  </footer>
 </body>
 
 </html>
