Сделана разметка блока с карточками товаров

--- a/catalog.html
+++ b/catalog.html
@@ -107,9 +107,130 @@
       </form>
     </section>
 
+    <section class="catalog">
+      <h2 class="visually-hidden catalog__title">Список средств для ухода</h2>
+      <ul class="catalog__list">
+        <li class="catalog__item сard">
+          <h3 class="card__title">
+            <a class="card__text-link" href="catalog-item.html">
+              <span class="card__category">Набор для путешествий</span>
+              <span class="card__name">«Baxter of California»</span>
+            </a>
+          </h3>
+          <p class="card__photo">
+            <a class="card__photo-link" href="catalog-item.html">
+              <img class="card__image" src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+            </a>
+          </p>
+          <p class="card__order">
+            <b class="card__price">2 900 ₽</b>
+            <a class="button card__button" href="#">Купить</a>
+          </p>
+        </li>
+        <li class="catalog__item">
+          <h3 class="card__title">
+            <a class="card__text-link" href="catalog-item.html">
+              <span class="card__category">Увлажняющий кондиционер</span>
+              <span class="card__name">«Baxter of California»</span>
+            </a>
+          </h3>
+          <p class="card__photo">
+            <a class="card__photo-link" href="catalog-item.html">
+              <img class="card__image" src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+            </a>
+          </p>
+          <p class="card__order">
+            <b class="card__price">750 ₽</b>
+            <a class="button card__button" href="#">Купить</a>
+          </p>
+        </li>
+        <li class="catalog__item">
+          <h3 class="card__title">
+            <a class="card__text-link" href="catalog-item.html">
+              <span class="card__category">Гель для волос</span>
+              <span class="card__name">«Suavecito»</span>
+            </a>
+          </h3>
+          <p class="card__photo">
+            <a class="card__photo-link" href="catalog-item.html">
+              <img class="card__image" src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
+            </a>
+          </p>
+          <p class="card__order">
+            <b class="card__price">290 ₽</b>
+            <a class="button card__button" href="#">Купить</a>
+          </p>
+        </li>
+        <li class="catalog__item">
+          <h3 class="card__title">
+            <a class="card__text-link" href="catalog-item.html">
+              <span class="card__category">Глина для укладки волос</span>
+              <span class="card__name">«American crew»</span>
+            </a>
+          </h3>
+          <p class="card__photo">
+            <a class="card__photo-link" href="catalog-item.html">
+              <img class="card__image" src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
+            </a>
+          </p>
+          <p class="card__order">
+            <b class="card__price">500 ₽</b>
+            <a class="button card__button" href="#">Купить</a>
+          </p>
+        </li>
+        <li class="catalog__item">
+          <h3 class="card__title">
+            <a class="card__text-link" href="catalog-item.html">
+              <span class="card__category">Гель для волос</span>
+              <span class="card__name">«American crew»</span>
+            </a>
+          </h3>
+          <p class="card__photo">
+            <a class="card__photo-link" href="catalog-item.html">
+              <img class="card__image" src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
+            </a>
+          </p>
+          <p class="card__order">
+            <b class="card__price">300 ₽</b>
+            <a class="button card__button" href="#">Купить</a>
+          </p>
+        </li>
+        <li class="catalog__item">
+          <h3 class="card__title">
+            <a class="card__text-link" href="catalog-item.html">
+              <span class="card__category">Набор для бритья</span>
+              <span class="card__name">«Baxter of California»</span>
+            </a>
+          </h3>
+          <p class="card__photo">
+            <a class="card__photo-link" href="catalog-item.html">
+              <img class="card__image" src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+            </a>
+          </p>
+          <p class="card__order">
+            <b class="card__price">3 900 ₽</b>
+            <a class="button card__button" href="#">Купить</a>
+          </p>
+        </li>
+      </ul>
+      <ul class="pagination__list">
+        <li class="pagination__item">
+          <a class="pagination__link" href="#">1</a>
+        </li>
+        <li class="pagination__item pagination__item--current">
+          <a>2</a>
+        </li>
+        <li class="pagination__item">
+          <a class="pagination__link" href="#">3</a>
+        </li>
+        <li class="pagination__item">
+          <a class="pagination__link" href="#">4</a>
+        </li>
+      </ul>
+    </section>
   </main>
-  <footer class="page__footer footer-contacts">
-    <p class="footer-contacts__text">
+  <footer class="page__footer footer">
+    <p class="footer__contacts footer-contacts">
       Барбершоп «Бородинский»
       <br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
       <br>
