--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
       </form>
     </section>
   </main>
-  <footer class="page__footer footer-contacts">
-    <p class="footer-contacts__text">
+  <footer class="page__footer footer">
+    <p class="footer__contacts footer-contacts">
       Барбершоп «Бородинский»
       <br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
       <br>
