--- a/catalog-item.html
+++ b/catalog-item.html
@@ -37,7 +37,39 @@
     </nav>
   </header>
 
-  <main>
+  <main class="page__main container">
+    <h1 class="page__title">Cредства для ухода</h1>
+
+    <ul class="breadcrumbs">
+      <li class="breadcrumbs__item">
+        <a class="breadcrumbs__link" href="index.html">Главная</a>
+      </li>
+      <li class="breadcrumbs__item">
+        <a class="breadcrumbs__link" href="catalog.html">Магазин</a>
+      </li>
+      <li class="breadcrumbs__item">
+        <a class="breadcrumbs__link" href="#">Средства для ухода</a>
+      </li>
+      <li class="breadcrumbs__item breadcrumbs__item--current">Набор для путешествий «Baxter of California»</li>
+    </ul>
+
+    <section class="product-photos">
+      <h2 class="visually-hidden product-photos__title">Изображения товара</h2>
+      <p class="product-photos__full">
+        <img class="product-photos__main" src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
+      </p>
+      <ul class="product-photos__list">
+        <li class="product-photos__item">
+          <img class="product-photos__add" src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас">
+        </li>
+        <li class="product-photos__item">
+          <img class="product-photos__add" src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль">
+        </li>
+        <li class="product-photos__item">
+          <img class="product-photos__add" src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части">
+        </li>
+      </ul>
+    </section>
 
   </main>
 
@@ -93,6 +125,6 @@
     </form>
     <button class="modal__close login-form__close" type="button">Закрыть</button>
   </section>
-  </body>
+</body>
 
-  </html>
+</html>
