Сделана разметка блока описания товара

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -71,6 +71,27 @@
       </ul>
     </section>
 
+    <section class="product-info">
+      <h2 class="visually-hidden product-info__title">Описание товара</h2>
+      <p class="product-info__availability">Есть в наличии</p>
+      <p class="product-info__article">Артикул: dexter-ae</p>
+      <p class="product-info__text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно
+        для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для
+        бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+      <p class="product-info__order">
+        <b class="product-info__price">2 900 ₽</b>
+        <a class="button product-info__button" href="#">Купить</a>
+      </p>
+      <h3 class="product-info__description">В набор входят:</h3>
+      <ul class="product-info__list">
+        <li class="product-info__item">Средство для умывания (50 мл)</li>
+        <li class="product-info__item">Увлажняющий крем (50 мл)</li>
+        <li class="product-info__item">Крем для бритья (50 мл)</li>
+        <li class="product-info__item">Крем после бритья, шампунь (50 мл)</li>
+        <li class="product-info__item">Удобная кожаная косметичка</li>
+      </ul>
+    </section>
+
   </main>
 
   <footer class="page__footer footer">
