--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </li>
       </ul>
       <ul class="navigation__user user">
-        <li class="user__item user__item--login">Вход</li>
+        <li class="user__item user__item--login">
+          <a class="user__link" href="login.html">Вход</a>
+        </li>
       </ul>
     </nav>
   </header>
