Заданы глобальные стили. Подключен шрифт

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Барбершоп «Бородинский»</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page">
   <header class="page__header">
     <nav class="navigation">
       <a class="navigation__logo">
-        <img class="navigation__image" src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+        <img class="navigation__image" src="img/index-logo.png" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
       </a>
       <ul class="navigation__menu menu">
         <li class="menu__item">
