Базовая стилизация основного содержания страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -11,11 +11,11 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page">
+<body class="page page--inner">
   <header class="page__header">
     <nav class="navigation">
       <a class="navigation__logo" href="index.html">
-        <img class="navigation__image" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+        <img class="navigation__image" src="img/logo.png" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
       <ul class="navigation__menu menu">
         <li class="menu__item">
@@ -80,7 +80,7 @@
               <label class="filter__label" for="filter-malin-goetz">Malin+Goetz</label>
             </li>
             <li class="filter__option">
-              <input class="visually-hidden filter__input filter__input--checkbox" type="checkbox" name="murrays" id="filter-murrays">
+              <input class="visually-hidden filter__input filter__input--checkbox" type="checkbox" name="murrays" id="filter-murrays" disabled>
               <label class="filter__label" for="filter-murrays">Murray’s</label>
             </li>
             <li class="filter__option">
@@ -132,7 +132,7 @@
             <a class="button card__button" href="#">Купить</a>
           </p>
         </li>
-        <li class="catalog__item">
+        <li class="catalog__item сard">
           <h3 class="card__title">
             <a class="card__text-link" href="catalog-item.html">
               <span class="card__category">Увлажняющий кондиционер</span>
@@ -149,7 +149,7 @@
             <a class="button card__button" href="#">Купить</a>
           </p>
         </li>
-        <li class="catalog__item">
+        <li class="catalog__item сard">
           <h3 class="card__title">
             <a class="card__text-link" href="catalog-item.html">
               <span class="card__category">Гель для волос</span>
@@ -166,7 +166,7 @@
             <a class="button card__button" href="#">Купить</a>
           </p>
         </li>
-        <li class="catalog__item">
+        <li class="catalog__item сard">
           <h3 class="card__title">
             <a class="card__text-link" href="catalog-item.html">
               <span class="card__category">Глина для укладки волос</span>
@@ -183,7 +183,7 @@
             <a class="button card__button" href="#">Купить</a>
           </p>
         </li>
-        <li class="catalog__item">
+        <li class="catalog__item сard">
           <h3 class="card__title">
             <a class="card__text-link" href="catalog-item.html">
               <span class="card__category">Гель для волос</span>
@@ -200,7 +200,7 @@
             <a class="button card__button" href="#">Купить</a>
           </p>
         </li>
-        <li class="catalog__item">
+        <li class="catalog__item сard">
           <h3 class="card__title">
             <a class="card__text-link" href="catalog-item.html">
               <span class="card__category">Набор для бритья</span>
@@ -223,7 +223,7 @@
           <a class="pagination__link" href="#">1</a>
         </li>
         <li class="pagination__item pagination__item--current">
-          <a>2</a>
+          <a class="pagination__link--current">2</a>
         </li>
         <li class="pagination__item">
           <a class="pagination__link" href="#">3</a>
