--- a/catalog-item.html
+++ b/catalog-item.html
@@ -11,11 +11,11 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page">
+<body class="page page--inner">
   <header class="page__header">
     <nav class="navigation">
       <a class="navigation__logo" href="index.html">
-        <img class="navigation__image" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+        <img class="navigation__image" src="img/logo.png" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
       <ul class="navigation__menu menu">
         <li class="menu__item">
