Переход на SCSS. Деление стилей на блоки

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -145,7 +145,7 @@
           <span class="login-from__indicator"></span>
           Запомните меня
         </label>
-        <a class="login-foem__restore" href="#">Я забыл пароль!</a>
+        <a class="login-form__restore" href="#">Я забыл пароль!</a>
       </p>
       <button class="button login-form__button" type="submit">Войти</button>
     </form>
