--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </li>
       </ul>
     </section>
-    <div class="index-columns">
+    <div class="page__columns">
       <section class="news">
         <h2 class="news__title">Новости</h2>
         <ul class="news__list">
@@ -92,7 +92,7 @@
       </section>
     </div>
 
-    <div class="index-columns">
+    <div class="page__columns">
     <section class="contacts">
       <h2 class="contacts__title">Контактная информация</h2>
       <p class="contacts__address">
