--- a/catalog.html
+++ b/catalog.html
@@ -218,7 +218,7 @@
           </p>
         </li>
       </ul>
-      <ul class="pagination__list">
+      <ul class="catalog__pagination pagination">
         <li class="pagination__item">
           <a class="pagination__link" href="#">1</a>
         </li>
@@ -280,7 +280,7 @@
           <span class="login-from__indicator"></span>
           Запомните меня
         </label>
-        <a class="login-foem__restore" href="#">Я забыл пароль!</a>
+        <a class="login-form__restore" href="#">Я забыл пароль!</a>
       </p>
       <button class="button login-form__button" type="submit">Войти</button>
     </form>
