--- a/catalog.html
+++ b/catalog.html
@@ -13,32 +13,36 @@
 
 <body class="page page--inner">
   <header class="page__header">
-    <nav class="navigation">
-      <a class="navigation__logo" href="index.html">
-        <img class="navigation__image" src="img/logo.png" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+    <nav class="navigation navigation--inner">
+      <a class="navigation__logo navigation__logo--inner" href="index.html">
+        <img class="navigation__image" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
-      <ul class="navigation__menu menu">
-        <li class="menu__item">
-          <a class="menu__link" href="info.html">Информация</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="news.html">Новости</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="price.html">Прайс-лист</a>
-        </li>
-        <li class="menu__item menu__item--current">
-          <a class="menu__link" href="catalog.html">Магазин</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="contacts.html">Контакты</a>
-        </li>
-      </ul>
-      <ul class="navigation__user user">
-        <li class="user__item user__item--login">
-          <a class="user__link" href="login.html">Вход</a>
-        </li>
-      </ul>
+      <div class="navigation__wrapper">
+        <div class="container container--nav">
+          <ul class="navigation__menu menu">
+            <li class="menu__item">
+              <a class="menu__link" href="info.html">Информация</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="news.html">Новости</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="price.html">Прайс-лист</a>
+            </li>
+            <li class="menu__item menu__item--current">
+              <a class="menu__link" href="catalog.html">Магазин</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="contacts.html">Контакты</a>
+            </li>
+          </ul>
+          <ul class="navigation__user user">
+            <li class="user__item user__item--login">
+              <a class="user__link" href="login.html">Вход</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
