--- a/index.html
+++ b/index.html
@@ -15,30 +15,34 @@
   <header class="page__header">
     <nav class="navigation">
       <a class="navigation__logo">
-        <img class="navigation__image" src="img/index-logo.png" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+        <img class="navigation__image" src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
       </a>
-      <ul class="navigation__menu menu">
-        <li class="menu__item">
-          <a class="menu__link" href="info.html">Информация</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="news.html">Новости</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="price.html">Прайс-лист</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="catalog.html">Магазин</a>
-        </li>
-        <li class="menu__item">
-          <a class="menu__link" href="contacts.html">Контакты</a>
-        </li>
-      </ul>
-      <ul class="navigation__user user">
-        <li class="user__item user__item--login">
-          <a class="user__link" href="login.html">Вход</a>
-        </li>
-      </ul>
+      <div class="navigation__wrapper">
+        <div class="container container--nav">
+          <ul class="navigation__menu menu">
+            <li class="menu__item">
+              <a class="menu__link" href="info.html">Информация</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="news.html">Новости</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="price.html">Прайс-лист</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="catalog.html">Магазин</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="contacts.html">Контакты</a>
+            </li>
+          </ul>
+          <ul class="navigation__user user">
+            <li class="user__item user__item--login">
+              <a class="user__link" href="login.html">Вход</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
@@ -93,45 +97,45 @@
     </div>
 
     <div class="page__columns">
-    <section class="contacts">
-      <h2 class="contacts__title">Контактная информация</h2>
-      <p class="contacts__address">
-        Барбершоп «Бородинский»
-        <br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
-        <br> Телефон: +7 (812) 666-02-66
-      </p>
-      <p class="contacts__time">
-        Время работы:
-        <br> пн—пт: с 10:00 до 22:00
-        <br> сб—вс: с 10:00 до 19:00
-      </p>
-      <a class="button contacts__button contacts__button--path" href="map.html">Как проехать</a>
-      <a class="button contacts__button contacts__button--feedback" href="contacts.html">Обратная связь</a>
-    </section>
+      <section class="contacts">
+        <h2 class="contacts__title">Контактная информация</h2>
+        <p class="contacts__address">
+          Барбершоп «Бородинский»
+          <br> Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8
+          <br> Телефон: +7 (812) 666-02-66
+        </p>
+        <p class="contacts__time">
+          Время работы:
+          <br> пн—пт: с 10:00 до 22:00
+          <br> сб—вс: с 10:00 до 19:00
+        </p>
+        <a class="button contacts__button contacts__button--path" href="map.html">Как проехать</a>
+        <a class="button contacts__button contacts__button--feedback" href="contacts.html">Обратная связь</a>
+      </section>
 
-    <section class="appointment">
-      <h2 class="appointment__title">Записаться</h2>
-      <p class="appointment__info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-      <form class="appointment__form" action="https://echo.htmlacademy.ru" method="post">
-        <p class="appointment__item">
-          <label class="appointment__label" for="appointment__date">Дата</label>
-          <input class="appointment__input" id="appointment__date" type="text" name="date" value="" placeholder="08.10.2017">
-        </p>
-        <p class="appointment__item">
-          <label class="appointment__label" for="appointment__time">Время</label>
-          <input class="appointment__input" id="appointment__time" type="text" name="time" value="" placeholder="10:00">
-        </p>
-        <p class="appointment__item">
-          <label class="appointment__label" for="appointment__name">Ваше имя</label>
-          <input class="appointment__input" id="appointment__name" type="text" name="name" value="" placeholder="Борода">
-        </p>
-        <p class="appointment__item">
-          <label class="appointment__label" for="appointment__phone">Телефон</label>
-          <input class="appointment__input" id="appointment__phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
-        </p>
-        <button class="button appointment__button" type="submit">Отправить</button>
-      </form>
-    </section>
+      <section class="appointment">
+        <h2 class="appointment__title">Записаться</h2>
+        <p class="appointment__info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
+        <form class="appointment__form" action="https://echo.htmlacademy.ru" method="post">
+          <p class="appointment__item">
+            <label class="appointment__label" for="appointment__date">Дата</label>
+            <input class="appointment__input" id="appointment__date" type="text" name="date" value="" placeholder="08.10.2017">
+          </p>
+          <p class="appointment__item">
+            <label class="appointment__label" for="appointment__time">Время</label>
+            <input class="appointment__input" id="appointment__time" type="text" name="time" value="" placeholder="10:00">
+          </p>
+          <p class="appointment__item">
+            <label class="appointment__label" for="appointment__name">Ваше имя</label>
+            <input class="appointment__input" id="appointment__name" type="text" name="name" value="" placeholder="Борода">
+          </p>
+          <p class="appointment__item">
+            <label class="appointment__label" for="appointment__phone">Телефон</label>
+            <input class="appointment__input" id="appointment__phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+          </p>
+          <button class="button appointment__button" type="submit">Отправить</button>
+        </form>
+      </section>
     </div>
   </main>
   <footer class="page__footer footer">
