Сделана сетка хедера внутренних страниц

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -12,13 +12,11 @@
 </head>
 
 <body class="page page--inner">
-  <header class="page__header">
-    <nav class="navigation">
-      <a class="navigation__logo" href="index.html">
+  <header class="page__header page__header--inner">
+    <nav class="navigation navigation--inner container">
+      <a class="navigation__logo navigation__logo--inner" href="index.html">
         <img class="navigation__image" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
-      <div class="navigation__wrapper">
-        <div class="container container--nav">
           <ul class="navigation__menu menu">
             <li class="menu__item">
               <a class="menu__link" href="info.html">Информация</a>
@@ -36,13 +34,12 @@
               <a class="menu__link" href="contacts.html">Контакты</a>
             </li>
           </ul>
-          <ul class="navigation__user user">
+          <ul class="navigation__user user user--inner">
             <li class="user__item user__item--login">
               <a class="user__link" href="login.html">Вход</a>
             </li>
           </ul>
-        </div>
-      </div>
+
     </nav>
   </header>
 
