--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
 
     <section class="features">
       <h2 class="features__title visually-hidden">Преимущества</h2>
-      <ul class="features_list">
-        <li class="feature__item">
-          <h3 class="feature__tagline">Быстро</h3>
-          <p class="feature__text">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
+      <ul class="features__list">
+        <li class="features__item">
+          <h3 class="features__tagline">Быстро</h3>
+          <p class="features__text">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
         </li>
-        <li class="feature__item">
-          <h3 class="feature__tagline">Круто</h3>
-          <p class="feature__text">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
+        <li class="features__item">
+          <h3 class="features__tagline">Круто</h3>
+          <p class="features__text">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
         </li>
-        <li class="feature__item">
-          <h3 class="feature__tagline">Дорого</h3>
-          <p class="feature__text">Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
+        <li class="features__item">
+          <h3 class="features__tagline">Дорого</h3>
+          <p class="features__text">Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </li>
       </ul>
     </section>
