Сетка секции каталога

--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,8 @@
       <li class="breadcrumbs__item breadcrumbs__item--current">Средства для ухода</li>
     </ul>
 
-    <section class="filters">
+    <div class="catalog-wrapper">
+    <section class="filter">
       <h2 class="visually-hidden filters__title">Фильтр товаров</h2>
       <form class="filter" method="get" action="https://echo.htmlacademy.ru">
         <fieldset class="filter__group">
@@ -233,8 +234,9 @@
         </li>
       </ul>
     </section>
+    </div>
   </main>
-<footer class="page__footer footer">
+<footer class="page__footer footer footer--inner">
   <div class="container container--footer">
     <p class="footer__contacts">
       Барбершоп «Бородинский»
