Сетка текстовой страницы

--- a/price.html
+++ b/price.html
@@ -58,8 +58,8 @@
       <div class="price__column">
         <div class="price__column--left">
 
-          <h2 class="price__tagline">Мы используем только
-            <br> лучшие средства:</h2>
+          <h3 class="price__tagline price__tagline--brands">Мы используем только
+            <br> лучшие средства:</h3>
           <ul class="price__brands">
             <li class="price__brand">Baxter of California</li>
             <li class="price__brand">Mr Natty</li>
@@ -70,8 +70,8 @@
         </div>
         <div class="price__column--right">
 
-          <h2 class="price__tagline">Цены на услуги
-            <br> наших мастеров:</h2>
+          <h3 class="price__tagline">Цены на услуги
+            <br> наших мастеров:</h3>
           <table class="price__list">
             <tr class="price__line">
               <td class="price__item">Стрижка</td>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="price__column">
-        <h2 class="price__tagline">Несколько слов о нас:</h2>
+        <h3 class="price__tagline price__tagline--about">Несколько слов о нас:</h3>
 
         <div class="price__column--left">
 
