--- a/index.html
+++ b/index.html
@@ -195,18 +195,18 @@
     <h2 class="modal-login__title">Личный кабинет</h2>
     <p class="modal-login__text">Введите свой логин и пароль.</p>
     <form class="modal-login__form login-form" action="https://echo.htmlacademy.ru" method="post">
-      <p class="login-form__login">
+      <p class="login-form__item login-form__item--login">
         <label class="visually-hidden login-form__label" for="user-login">Логин</label>
         <input class="login-form__input login-form__input--user" id="user-login" type="text" name="login" placeholder="Логин">
       </p>
-      <p class="login-form__password">
+      <p class="login-form__item login-form__item--password">
         <label class="visually-hidden login-form__label" for="user-password">Пароль</label>
         <input class="login-form__input login-form__input--password" id="user-password" type="password" name="password" placeholder="Пароль">
       </p>
-      <p class="login-form__info">
+      <p class="login-form__item login-form__item--info">
         <label class="login-form__checkbox">
-          <input class="visually-hidden login-form__input" type="checkbox" name="remember">
-          <span class="login-from__indicator"></span>
+          <input class="visually-hidden login-form__input login-form__input--checkbox" type="checkbox" name="remember">
+          <span class="login-form__indicator"></span>
           Запомните меня
         </label>
         <a class="login-form__restore" href="#">Я забыл пароль!</a>
