--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
   <section class="modal modal-map">
     <h2 class="visually-hidden modal-map__title">Как до нас добраться</h2>
-    <p>
+    <p class="modal-map__photo">
       <img class="modal-map__image" src="img/map.jpg" width="780" height="560" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     </p>
     <button class="modal__close modal-map__close" type="button">Закрыть</button>
