Добавлен JavaScript для модального окна входа

--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
     </p>
     <button class="modal__close modal-map__close" type="button">Закрыть</button>
   </section>
+  
+  <script src="js/form.js"></script>
 </body>
 
 </html>
